--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL8Dialect
+spring.mvc.hiddenmethod.filter.enabled=true
